feat: Single page application auditoría de sistemas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Source+Serif+4:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
 
   <!-- Estilos -->
   <link rel="stylesheet" href="styles.css" />
@@ -78,7 +78,7 @@
         </div>
 
         <!-- Ilustración SVG -->
-        <div class="hero-visual fade-in delay-2" aria-hidden="true">
+        <div class="hero-visual" aria-hidden="true">
           <svg class="hero-svg" viewBox="0 0 460 400" fill="none" xmlns="http://www.w3.org/2000/svg">
             <defs>
               <filter id="s1"><feDropShadow dx="0" dy="8" stdDeviation="16" flood-color="#1a2f5a" flood-opacity="0.1"/></filter>
